--- a/src/app/dialogs/userdialog/userdialog.component.html
+++ b/src/app/dialogs/userdialog/userdialog.component.html
@@ -44,11 +44,11 @@
 
     <div mat-dialog-actions class="wrap">
 
-      <button mat-button class="test" *ngIf="flag == 1" type="submit" [mat-dialog-close]="1" (click)="add()"
+      <button mat-button class="test" *ngIf="flag == 1" type="submit" (click)="add()"
         [disabled]="!formControl.valid">Ok</button>
-      <button mat-button class="test" *ngIf="flag == 2" type="submit" [mat-dialog-close]="1" (click)="update()"
+      <button mat-button class="test" *ngIf="flag == 2" type="submit" (click)="update()"
         [disabled]="!formControl.valid">Ok</button>
-      <button mat-button class="test item2-delete" *ngIf="flag == 3" type="submit" [mat-dialog-close]="1"
+      <button mat-button class="test item2-delete" *ngIf="flag == 3" type="submit" 
         (click)="delete()">Delete</button>
       <button mat-button class="test" (click)="close()">Cancel</button>
       <div *ngIf="isLoading"
