--- a/src/app/dialogs/objectdialog/objectdialog.component.html
+++ b/src/app/dialogs/objectdialog/objectdialog.component.html
@@ -168,9 +168,9 @@
 
     <div mat-dialog-actions>
 
-      <button mat-button class="item2  item2-delete" *ngIf="flag == 3" type="submit" [mat-dialog-close]="1"
+      <button mat-button class="item2  item2-delete" *ngIf="flag == 3" type="submit" 
         (click)="delete()">Delete</button>
-      <button mat-button class="item2" *ngIf="flag == 2" type="submit" [mat-dialog-close]="1" (click)="update()"
+      <button mat-button class="item2" *ngIf="flag == 2" type="submit"  (click)="update()"
         [disabled]="!formControl.valid">Ok</button>
       <button mat-button class="item2" (click)="close()">Close</button>
       <div *ngIf="isLoading"
