--- a/src/app/dialogs/object-create-dialog/object-create-dialog.component.html
+++ b/src/app/dialogs/object-create-dialog/object-create-dialog.component.html
@@ -144,7 +144,7 @@
 
 <div mat-dialog-actions>
 
-  <button mat-button class="item2" type="submit" [mat-dialog-close]="1" (click)="add()" [disabled]="!formControl.valid">Add</button>
+  <button mat-button class="item2" type="submit" (click)="add()" [disabled]="!formControl.valid">Add</button>
   <button mat-button class="item2" (click)="close()">Close</button>
   <div *ngIf="isLoading"
   style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
