priprema za frikom

--- a/src/app/components/modules/modules.component.html
+++ b/src/app/components/modules/modules.component.html
@@ -10,13 +10,13 @@
         <div style="justify-content: center;margin-right: 50px;">STORE METRICS</div>
     </div>
 
-    <div class="item resolve-fb fadeIn second" [routerLink]="['/promo']">
+    <div class="item resolve-fb fadeIn second" style="background-color: gray;">
         <!-- ENABLE: -->
         <p>
             <img src="../../../assets/icons8-price-tag-48.png" width="50px" height="50px"
                 style="margin-top:15px; float:left; margin-left:20px;">
         </p>
-        <div style="justify-content: center;margin-right: 30px;">PROMO MANAGEMENT</div>
+        <div style="justify-content: center;margin-right: 30px;" >PROMO MANAGEMENT</div>
     </div>
 
     <div class="item2 resolve-fb fadeIn third" (click)="logout()">
