--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="menu fadeInDown">
 
-  <div *ngIf="!menager" class="item fadeIn second" [routerLink]="['/chooseObject/resolveFeedbacks']">
+  <div *ngIf="!menager" class="item fadeIn second" style="background-color: gray;">
     <!-- ENABLE: [routerLink]="['/chooseObject/resolveFeedbacks']"-->
     <p>
       <img src="../../../assets/belo.png" width="50px" height="50px"
@@ -18,7 +18,7 @@
       <img src="../../../assets/belo.png" width="50px" height="50px"
         style="margin-top:15px; float:left; margin-left:20px;">
     </p>
-    <div style="justify-content: center;margin-right: 50px;" [routerLink]="['/chooseObject/addStoreCheck']">STORE CHECK
+    <div style="justify-content: center;margin-right: 50px;" style="background-color: gray;">STORE CHECK
     </div>
   </div>
 
@@ -31,7 +31,7 @@
     <div style="justify-content: center;margin-right: 30px;">SECONDARY POSITIONS</div>
   </div>
 
-  <div class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/priceScanner']">
+  <div class="item resolve-fb fadeIn second" style="background-color: gray;">
     <!-- ENABLE: -->
     <p>
       <img src="../../../assets/icons8-barcode-scanner-64.png" width="50px" height="50px"
@@ -40,7 +40,7 @@
     <div style="justify-content: center;margin-right: 50px;">PRICE SCANNER</div>
   </div>
 
-  <div class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/returns']">
+  <div class="item resolve-fb fadeIn second" style="background-color: gray;">
     <!-- ENABLE: -->
     <p>
       <img src="../../../assets/icons8-u-turn-to-left-30.png" width="50px" height="50px"
