--- a/src/app/components/position/position.component.html
+++ b/src/app/components/position/position.component.html
@@ -1,4 +1,4 @@
-<div style="margin:50px" *ngIf="positionCheck">
+<!--<div style="margin:50px" *ngIf="positionCheck">
   <label style="margin-right:10px; color:black">
     <input type="radio" name="option" value="positions" (click)="toggleIsSuggestions('pos')" > Positions
   </label>
@@ -6,7 +6,7 @@
     <input type="radio" name="option" value="suggestions" (click)="toggleIsSuggestions('sug')"> Suggestions
   </label>
 </div>
-
+-->
 <div class="container mat-elevation-z8 font">
 
 
