--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -17,25 +17,28 @@
                 Store Metrics <mat-icon>expand_more</mat-icon>
             </button>
             <div *ngIf="showStoreMetrics">
-                <a mat-list-item class="nav-list-item" [routerLink]="['dashboard']"
-                    (click)="updateTitle('Feedback statistics')">
+                <a mat-list-item class="nav-list-item" style="background-color: rgb(219, 219, 219);">
+                <!--[routerLink]="['dashboard'] (click)="updateTitle('Feedback statistics')"-->
                     <mat-icon class="nav-icon">dashboard</mat-icon>Feedback Statistics
                 </a>
-                <a mat-list-item class="nav-list-item" [routerLink]="['position-dashboard']"
+                <a mat-list-item class="nav-list-item"  [routerLink]="['position-dashboard']"
                     (click)="updateTitle('Position statistics')">
                     <mat-icon class="nav-icon">dashboard</mat-icon>Position Statistics
                 </a>
-                <a mat-list-item class="nav-list-item" [routerLink]="['return-dashboard']"
-                    (click)="updateTitle('Return statistics')">
+                <a mat-list-item class="nav-list-item" style="background-color: rgb(219, 219, 219);" >
+                <!--[routerLink]="['return-dashboard']" (click)="updateTitle('Return statistics')--> 
                     <mat-icon class="nav-icon">dashboard</mat-icon>Return Statistics
                 </a>
-                <a mat-list-item class="nav-list-item" [routerLink]="['storeCheckReceiver']"
-                    (click)="updateTitle('Store check receivers')">
+                <a mat-list-item class="nav-list-item" style="background-color: rgb(219, 219, 219);" >
+                    <!--[routerLink]="['storeCheckReceiver']"  (click)="updateTitle('Store check receivers')"-->
                     <mat-icon class="nav-icon">email</mat-icon>Store Check Receivers
                 </a>
             </div>
-            <button mat-button class="nav-button" (click)="togglePromoManagement()">
-                Promo Management <mat-icon>expand_more</mat-icon>
+            <button mat-button class="nav-button" style="background-color: rgb(219, 219, 219);" >
+               
+                Promo Management 
+                 <!--<mat-icon>expand_more</mat-icon>-->
+                
             </button>
             <div *ngIf="showPromoManagement">
                 <a mat-list-item class="nav-list-item" [routerLink]="['promo-dashboard']"
