margin u cancel position dialog

--- a/src/app/dialogs/position-dialog/position-dialog.component.html
+++ b/src/app/dialogs/position-dialog/position-dialog.component.html
@@ -272,14 +272,8 @@
         <p>Photo 3 is uploaded.</p>
       </div>
 
-
-
-
-
-
-
     </div>
-    <div mat-dialog-actions>
+    <div mat-dialog-actions style="margin-top: -50px;">
       <button class="item2" mat-button *ngIf="flag == 1" type="submit" (click)="submitFormCreate()"
         [disabled]="!formControl.valid">
         Ok
