--- a/src/app/dialogs/position-dialog/position-dialog.component.html
+++ b/src/app/dialogs/position-dialog/position-dialog.component.html
@@ -135,7 +135,7 @@
 
         <div class="photo-input">
           <!-- <p style="margin-bottom:5% " *ngIf="flag!=2 && flag !=3">Click to add photo:</p> -->
-          <p *ngIf="flag!=2 && flag !=3">Click to add photo:</p>
+          <p *ngIf="flag!=2 && flag !=3">Click to add first photo:</p>
           <label for="inputFile" class="browseFile" *ngIf="flag!=2 && flag != 3">
             <!-- <img src="assets\photoicon.png" width="10%" height="10%" alt="PhotoIcon" /></label> -->
             <img src="assets\photoicon.png" alt="PhotoIcon" />
@@ -155,8 +155,8 @@
 
         <div class="photo-input">
           <!-- <p style="margin-bottom:5% " *ngIf="flag!=2 && flag !=3">Click to add photo:</p> -->
-          <p *ngIf="flag!=2 && flag !=3">Click to add photo:</p>
-          <label for="inputFile" class="browseFile" *ngIf="flag!=2 && flag != 3">
+          <p *ngIf="flag==1">Click to add second photo:</p>
+          <label for="inputFile" class="browseFile" *ngIf="flag==1">
             <!-- <img src="assets\photoicon.png" width="10%" height="10%" alt="PhotoIcon" /></label> -->
             <img src="assets\photoicon.png" alt="PhotoIcon" />
           </label>
@@ -175,7 +175,7 @@
 
         <div class="photo-input">
           <!-- <p style="margin-bottom:5% " *ngIf="flag!=2 && flag !=3">Click to add photo:</p> -->
-          <p *ngIf="flag!=2 && flag !=3">Click to add photo:</p>
+          <p *ngIf="flag!=2 && flag !=3">Click to add third photo:</p>
           <label for="inputFile" class="browseFile" *ngIf="flag!=2 && flag != 3">
             <!-- <img src="assets\photoicon.png" width="10%" height="10%" alt="PhotoIcon" /></label> -->
             <img src="assets\photoicon.png" alt="PhotoIcon" />
@@ -273,18 +273,29 @@
       </div>
 
     </div>
-    <div mat-dialog-actions style="margin-top: -50px;">
+    
+    <div mat-dialog-actions *ngIf="flag == 3 || flag == 2" style="margin-top: -30px;">
+      <button mat-button color="warn" class="item2 item2-delete" *ngIf="flag == 2" type="submit" (click)="delete()">
+        Delete
+      </button>
+      <button mat-button class="item2" (click)="close()">Cancel</button>
+      <div *ngIf="isLoading"
+        style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
+        <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
+        </mat-progress-spinner>
+      </div>
+    </div>
+    
+    <div mat-dialog-actions *ngIf="flag == 1 || flag == 4">
       <button class="item2" mat-button *ngIf="flag == 1" type="submit" (click)="submitFormCreate()"
         [disabled]="!formControl.valid">
         Ok
       </button>
-      <button class="item2" mat-button *ngIf="flag == 4 || (flag==3&&imageUploaded)" type="submit"
-        (click)="submitFormUpdate()">
-        Ok
-      </button>
-      <button mat-button color="warn" class="item2 item2-delete" *ngIf="flag == 2" type="submit" (click)="delete()">
-        Delete
-      </button>
+      <button class="item2" mat-button *ngIf="flag == 4" type="submit"
+      (click)="submitFormUpdate()">
+      Ok
+    </button>
+      
       <button mat-button class="item2" (click)="close()">Cancel</button>
       <div *ngIf="isLoading"
         style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
