disable na dashbaordu i choose store

--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -5,7 +5,7 @@
         <div class="menu-row">
           <div class="menu-item">
             <mat-form-field>
-              <input type="text" matInput placeholder="Object name" [(ngModel)]="objectName">
+              <input type="text" matInput placeholder="Store name" [(ngModel)]="objectName">
             </mat-form-field>
           </div>
 
