--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -3,7 +3,7 @@
     <div class="header fadeIn first">
 
         <img src="../../../assets/Store Metrics Logo PNG.png" alt="SC icon" width="80" height="80" style="float:left;">
-        <h2 style="height:80px;"> <span>Choose Object</span> </h2>
+        <h2 style="height:80px;"> <span>Choose Store</span> </h2>
 
     </div>
 
