Export positions dialog - spinner added

--- a/src/app/dialogs/excelDialogs/exportPositionsDialog/export-positions-dialog.component.html
+++ b/src/app/dialogs/excelDialogs/exportPositionsDialog/export-positions-dialog.component.html
@@ -76,11 +76,11 @@
             onmouseover="this.style.color='white';" onmouseout="this.style.color='#39ace7'">Export</a></span></button>
             <button mat-button class="test" (click)="close()">Close</button>
 
-           <!-- <div *ngIf="isLoading"
-            style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
+           <div *ngIf="isLoading"
+            style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed; margin-left:10px">
             <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
             </mat-progress-spinner>
-          </div>-->
+          </div>
     </div>
   </form>
 </div>
