--- a/src/app/dialogs/userdialog/userdialog.component.html
+++ b/src/app/dialogs/userdialog/userdialog.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="form">
       <mat-form-field>
-        <input matInput placeholder="Email" [(ngModel)]="data.email" name="email" [disabled]="flag==3" />
+        <input matInput placeholder="Email" [(ngModel)]="data.email" name="email" [disabled]="flag==3" required />
       </mat-form-field>
     </div>
     <div class="form" *ngIf="flag!=2">
