--- a/src/app/dialogs/excelDialogs/exportPositionsDialog/export-positions-dialog.component.html
+++ b/src/app/dialogs/excelDialogs/exportPositionsDialog/export-positions-dialog.component.html
@@ -72,8 +72,8 @@
 
 
           <button mat-button class="test" type="submit" [disabled]="isLoading" (click)="submitForm()"
-          [disabled]="!formControl.valid"><span class="feedbackSpan"><a
-            onmouseover="this.style.color='white';" onmouseout="this.style.color='#39ace7'">Export</a></span></button>
+          [disabled]="!formControl.valid">Export</button>
+
             <button mat-button class="test" (click)="close()">Close</button>
 
            <div *ngIf="isLoading"
