--- a/src/app/components/uploads/uploads.component.html
+++ b/src/app/components/uploads/uploads.component.html
@@ -1,4 +1,3 @@
-
 <p class="warning-message"> Warning: Max allowed 1000 rows per Excel file.</p><br>
 <p class="center font"> Don't exit this page while uploading excels partially!</p><br>
 
@@ -10,7 +9,7 @@
     <!--<h3 style="margin:5%;color:#56baed;">Drag and drop file here</h3>-->
 
     <label for="objectFileDropRef" class="browseButton" *ngIf="isObjectsEmpty">Browse</label>
-    <label class="browseButton" *ngIf="!isObjectsEmpty" (click)="exportObjects()">Export</label>
+    <label class="browseButton" *ngIf="!isObjectsEmpty" (click)="openDialog(1)">Export</label>
     <button mat-button color="warn" *ngIf="!isObjectsEmpty" (click)="deleteObjects()">Delete objects</button>
     <div class="download-template">
       <em id="download-obj-template" class="fa-solid fa-download fa-2x" (click)="downloadTemplate(1)"></em>
@@ -47,11 +46,11 @@
       </mat-progress-spinner>
     </div>
 
-    <br> 
+    <br>
 
 
 
-    
+
   </div>
 
 
@@ -78,7 +77,7 @@
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
       </mat-progress-spinner>
     </div>
-    
+
   </div>
 
 </div>
@@ -112,7 +111,7 @@
 
     <BR>
     <!--<h3 style="margin:5%; color:#56baed;">Drag and drop file here</h3>-->
-   <!-- <label for="promosFileDropRef" class="browseButton" *ngIf="isPromosEmpty">Browse</label>-->
+    <!-- <label for="promosFileDropRef" class="browseButton" *ngIf="isPromosEmpty">Browse</label>-->
     <label class="browseButton" *ngIf="!isPromosEmpty" (click)="openDialog(5)">Export</label>
     <button mat-button color="warn" *ngIf="!isPromosEmpty" (click)="deletePromos()">Delete promos</button>
 
@@ -128,15 +127,15 @@
       </mat-progress-spinner>
     </div>
 
-    <br> 
+    <br>
 
-    
- 
 
-    
+
+
+
   </div>
 
-  
+
 
 
 
@@ -162,10 +161,10 @@
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="30">
       </mat-progress-spinner>
     </div>
-  
-  
-    
-   
+
+
+
+
   </div>
 
 </div>
@@ -173,5 +172,3 @@
 <p class="error-message" *ngIf="errorMessage">{{errorMessage}}</p>
 
 <p style="margin-top:100%">.</p>
-
-
