--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -34,8 +34,8 @@
                     <mat-icon class="nav-icon">email</mat-icon>Store Check Receivers
                 </a>
             </div>
-            <button mat-button class="nav-button" style="background-color: rgb(219, 219, 219);" >
-               
+            <button mat-button class="nav-button" style="background-color: rgb(219, 219, 219);">
+               <!-- [routerLink]="['promo-dashboard']" -->
                 Promo Management 
                  <!--<mat-icon>expand_more</mat-icon>-->
                 
