--- a/src/app/components/modules/modules.component.html
+++ b/src/app/components/modules/modules.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="item resolve-fb fadeIn second" style="background-color: gray;">
-        <!-- ENABLE: -->
+        <!-- ENABLE: [routerLink]="['/promo']"  -->
         <p>
             <img src="../../../assets/icons8-price-tag-48.png" width="50px" height="50px"
                 style="margin-top:15px; float:left; margin-left:20px;">
